# gemini-robotics-sdk

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
cmake/: SafariDependencies.cmake
examples/aloha/agent/: run.py  simple_agent.py
examples/logging/: lerobot_data_conversion_script.py
examples/model/: README.md  gemini_robotics_aloha_eval_example.py  gemini_robotics_policy_example.py
mcap/: mcap.cpp
safari_sdk/: __init__.py  utils.py
safari_sdk/agent/framework/: agent_framework.py  config.py  config_test.py  flags.py  types.py  types_test.py
safari_sdk/agent/framework/agents/: agent.py  agent_test.py  handler.py
safari_sdk/agent/framework/comms/: external_controller.py  external_controller_test.py  log_handler.py  passive_controller.py
safari_sdk/agent/framework/embodiments/: aloha_test.py  fr3_duo.py  fr3_duo_endpoints.py  fr3_duo_test.py  omega_star.py  omega_star_fast_api_endpoints.py
safari_sdk/agent/framework/eval/: agent_eval_binary.py  agent_eval_lib.py  agent_eval_util.py
safari_sdk/agent/framework/event_bus/: audio_event_handler.py  audio_event_handler_test.py  event_bus.py  event_bus_test.py  event_stream_handler_test.py  tool_call_event_handler_test.py
safari_sdk/agent/framework/inference_handlers/: live_handler.py  nonstreaming_handler.py  unary_genai_handler.py
safari_sdk/agent/framework/live_api/: live_handler_test.py
safari_sdk/agent/framework/tools/: ensemble_success_detection.py  fast_api_tools.py  fast_api_tools_test.py  fulfill_order.py  fulfill_order_a1.py  fulfill_order_a1_test.py  fulfill_order_test.py  genai_client.py  image_buffer_test.py  long_horizon_task.py  long_horizon_task_test.py  overall_task_status.py  overall_task_status_test.py  run_instruction_for_duration.py  run_instruction_for_duration_test.py  run_instruction_for_duration_with_preemption.py  run_instruction_until_done.py  scene_description.py  scene_description_test.py  success_detection.py  success_detection_test.py  task_planning_test.py  tool_test.py  user_request_executor.py  vqa.py
safari_sdk/agent/framework/ui/: default_ui.py  index.html  operator_text_ui.py  terminal_ui.py  terminal_ui_test.py
safari_sdk/agent/framework/utils/: http_options.py  image_processing.py  image_processing_test.py
safari_sdk/flywheel/: flywheel_cli.py  flywheel_cli_test.py
safari_sdk/logging/cc/: base_mcap_file_handle_factory.h  episode_data.cc  episode_data.h  log_data_serializer_utils.cc  log_data_serializer_utils.h  log_data_serializer_utils_test.cc  mcap_file_handle.cc  mcap_file_handle.h  mcap_file_handle_factory.cc  mcap_file_handle_factory.h  mcap_file_handle_test.cc  mcap_write_op.h  thread_pool_log_writer.cc  thread_pool_log_writer.h  thread_pool_log_writer_test.cc
safari_sdk/logging/cc/python/: log_writer.cc
safari_sdk/logging/python/: constants.py  episodic_logger.py  episodic_logger_test.py  mcap_lerobot_logger.py  mcap_lerobot_logger_test.py  metadata_utils.py  metadata_utils_test.py  session_manager.py  session_manager_test.py
safari_sdk/model/: gemini_robotics_policy.py  gemini_robotics_policy_test.py  genai_robotics.py  genai_robotics_test.py  observation_to_model_query_contents.py  observation_to_model_query_contents_test.py  thinking_manager.py  thinking_manager_test.py  video_saver.py
safari_sdk/orchestrator/: example_client_sdk_integration.py  example_client_sdk_observer_mode.py
safari_sdk/orchestrator/client/: interface.py  interface_test.py
safari_sdk/orchestrator/client/dataclass/: api_response.py  robot_job.py  work_unit.py  work_unit_test.py
safari_sdk/orchestrator/client/libs/: artifact.py  artifact_lib_test.py  current_robot.py  current_robot_test.py  robot_job.py  robot_job_test.py  robot_job_work_unit.py  robot_job_work_unit_test.py  visual_overlay.py  visual_overlay_test.py
safari_sdk/orchestrator/helpers/: orchestrator_helper.py  orchestrator_helper_test.py
safari_sdk/protos/logging/: metadata.proto  orchestrator_info.proto  policy_environment_metadata.proto  policy_type.proto
scripts/: build_wheel.sh  generate_revision_info.sh  setup_development_mode.sh  update_pip_dependencies.sh
