[project]
name = "safari_sdk"
description = "Safari SDK: the SDK for Google DeepMind Gemini Robotics models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [{name = "Safari SDKAuthors", email="safari-sdk-authors@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",  # EOL 2027-10
    "Programming Language :: Python :: 3.12",  # EOL 2028-10
    "Programming Language :: Python :: 3.13",  # EOL 2029-10
    "License :: Other/Proprietary License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
  # copybara:strip_begin(for internal changes only)
  # LINT.IfChange
  # copybara:strip_end
  # go/keep-sorted start
  "absl-py",
  "dataclasses_json",
  "dm-env",
  "evdev; sys_platform != 'win32'",
  "fastapi",
  "gdm-robotics",
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  # TODO: b/469832494 - Remove once we determine a better dependency resolution.
  "google-genai<=1.55.0",
  "grpcio",
  "imageio",
  "immutabledict",
  "jax",
  "lark~=1.2",
  "mcap-protobuf-support",
  "mediapy",
  "mujoco>=3.3.6",
  "opencv-python",
  "overrides",
  "protobuf<7",
  "psutil",
  "python-magic",
  "pytz",
  "scipy",
  "tensorflow",
  "uvicorn",
  "watchdog",
  # go/keep-sorted end
  # copybara:strip_begin(for internal changes only)
  # LINT.ThenChange(//depot/google3/third_party/safari/sdk/requirements.txt)
  # Run `bash third_party/safari/sdk/scripts/update_pip_dependencies.sh`
  # to update the dependencies in requirements.txt.
  # copybara:strip_end
]

# Configure scikit to pull version value from "safari_sdk/__init__.py"
# See: https://scikit-build-core.readthedocs.io/en/latest/configuration/dynamic.html#regex
dynamic = ["version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "safari_sdk/__init__.py"

[tool.scikit-build.wheel]
platlib = true
exclude = ["**/*_test.py", "**/*_test.cc"]

[tool.scikit-build.sdist]
# scikit_build_core uses .gitignore to exclude files from the package, so add
# any files which are excluded from git but *included* in the pip package here.
include = ["safari_sdk/revision_info.txt", "safari_sdk/**/*_pb2.py"]

[project.scripts]
flywheel-cli = "safari_sdk.flywheel.flywheel_cli:cli_main"  # 'flywheel-cli' will be installed as a command

[project.urls]
homepage = "https://deepmind.google/models/gemini-robotics/"
repository = "https://github.com/google-deepmind/gemini-robotics-sdk"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    # go/keep-sorted start
    "immutabledict",
    "parameterized",
    "pyink",
    "pylint>=2.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    # go/keep-sorted end
]


[tool.pyink]
# Formatting configuration to follow Google style-guide
pyink-indentation = 2
pyink-use-majority-quotes = true

# The scikit backend invokes CMake to build the Python bindings and generate
# the Protobuf files.
# This is done in a unique temporary build directory unless otherwise specified.
[build-system]
requires = ["scikit-build-core>=0.10","pybind11"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
python_files = ["*_test.py"]
# Use asyncio for async tests (eg safari_sdk/agent/framework/event_bus/event_stream_handler_test.py).
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
